test/scc_test/exp/semantic-errors/003.a
003.t:4:5: error: expression must have struct or union type